--- a/prg/Untitled.ipynb
+++ b/prg/Untitled.ipynb
@@ -4,20 +4,78 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "malibu = [118, 1, 2000, 1]\n",
+    "dist, cars = KNN.findNeighbors(malibu)\n",
+    "carsNorm, malibuNorm = KNN.normalize(cars, malibu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[16.97056274847714, 'honda civic'], [11.135528725660043, 'jeep wrangler'], [57.41080037762929, 'audi a4'], [14.035668847618199, 'ford focus'], [11.916375287812984, 'saturn aura'], [22.759613353482084, 'chevy equinox'], [33.46640106136302, 'infiniti 635'], [84.72307831990054, 'veloz scooter'], [100.7869039111729, 'lambourgini'], [63.05553108173778, 'nissan sentra']]\n",
-      "\n",
-      "[[130, 1, 2012, 1, 0, 'honda civic'], [110, 0, 1992, 6, 0, 'jeep wrangler'], [175, 1, 2007, 3, 1, 'audi a4'], [120, 1, 2014, 4, 0, 'ford focus'], [110, 1, 2009, 4, 0, 'saturn aura'], [100, 1, 2014, 3, 0, 'chevy equinox'], [151, 1, 2006, 6, 1, 'infiniti 635'], [35, 1, 2017, 1, 0, 'veloz scooter'], [217, 0, 2019, 6, 1, 'lambourgini'], [181, 1, 2003, 3, 0, 'nissan sentra']]\n",
-      "The malibu is closest to the jeep wrangler\n"
+      "Name\t\tTop Speed\tAuto\tYear\tColor\tFast\n",
+      "Honda Civic\t130.00\t\t1.00\t2012.00\t1.00\t0.00\n",
+      "Jeep Wrangler\t110.00\t\t0.00\t1992.00\t6.00\t0.00\n",
+      "Audi a4\t\t175.00\t\t1.00\t2007.00\t3.00\t1.00\n",
+      "Ford Focus\t120.00\t\t1.00\t2014.00\t4.00\t0.00\n",
+      "Aaturn Aura\t110.00\t\t1.00\t2009.00\t4.00\t0.00\n",
+      "Chevy Equinox\t100.00\t\t1.00\t2014.00\t3.00\t0.00\n",
+      "Infiniti 635\t151.00\t\t1.00\t2006.00\t6.00\t1.00\n",
+      "Veloz Scooter\t35.00\t\t1.00\t2017.00\t1.00\t0.00\n",
+      "Lambourgini\t217.00\t\t0.00\t2019.00\t6.00\t1.00\n",
+      "Nissan Sentra\t181.00\t\t1.00\t2003.00\t3.00\t0.00\n",
+      "[-0.30817173886471216, 1, -1.242653828610808, -1.5069930449020585]\n"
      ]
     }
    ],
    "source": [
-    "import distance"
+    "KNN.printCars(cars)\n",
+    "print(malibuNorm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name\t\tTop Speed\tAuto\tYear\tColor\tFast\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-acc81c963029>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mKNN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprintCars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcarsNorm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/IU_Classes/2018/2_Semester/E222/myRepo/sp19-222-101/prg/KNN.py\u001b[0m in \u001b[0;36mprintCars\u001b[0;34m(cars)\u001b[0m\n\u001b[1;32m     85\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Name\\t\\tTop Speed\\tAuto\\tYear\\tColor\\tFast\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcars\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\\t\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "KNN.printCars(carsNorm)"
    ]
   },
   {
