--- a/project/project-report/report.bib
+++ b/project/project-report/report.bib
@@ -24,3 +24,26 @@
   pages={5--16},
   year={1998}
 }
+@inproceedings{metsis2006spam,
+  title={Spam filtering with naive bayes-which naive bayes?},
+  author={Metsis, Vangelis and Androutsopoulos, Ion and Paliouras, Georgios},
+  booktitle={CEAS},
+  volume={17},
+  pages={28--69},
+  year={2006},
+  organization={Mountain View, CA}
+}
+@inproceedings{sculley2007relaxed,
+  title={Relaxed online SVMs for spam filtering},
+  author={Sculley, David and Wachman, Gabriel M},
+  booktitle={Proceedings of the 30th annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={415--422},
+  year={2007},
+  organization={ACM}
+}
+@article{androutsopoulos2000evaluation,
+  title={An evaluation of naive bayesian anti-spam filtering},
+  author={Androutsopoulos, Ion and Koutsias, John and Chandrinos, Konstantinos V and Paliouras, George and Spyropoulos, Constantine D},
+  journal={arXiv preprint cs/0006013},
+  year={2000}
+}
