add examples of phishing and malware

--- a/project-report/report.bib
+++ b/project-report/report.bib
@@ -47,3 +47,22 @@
   journal={arXiv preprint cs/0006013},
   year={2000}
 }
+@article{bridges2008changing,
+  title={The changing face of malware},
+  author={Bridges, Lloyd},
+  journal={Network Security},
+  volume={2008},
+  number={1},
+  pages={17--20},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{jagatic2007social,
+  title={Social phishing},
+  author={Jagatic, Tom N and Johnson, Nathaniel A and Jakobsson, Markus and Menczer, Filippo},
+  journal={Communications of the ACM},
+  volume={50},
+  number={10},
+  pages={94--100},
+  year={2007}
+}
